Implementacja vizyt początek

--- a/src/main/resources/templates/fragments4.html
+++ b/src/main/resources/templates/fragments4.html
@@ -7,11 +7,10 @@
 
         <nav id="menu">
             <section id="navbar">
-                <a class="menu " href="/">Aktualności</a>
-                <a class="menuS" href="/#about">O nas</a>
-                <a class="menuS" href="/#services">Usługi</a>
-                <a class="menuS" href="/#contact">Kontakt</a>
-                <a class="menu active" href="/login">Konto</a>
+                <a class="menuPD " href="/homepage">Aktualności</a>
+                <a class="menuPD" href="/doctor/visit">Wizyty</a>
+                <a class="menuPD" href="/doctor/doctor">Pacjenci</a>
+                <a class="menuPD" href="/doctor">O mnie</a>
             </section>
         </nav>
 
