Implementacja wizyty: notatek, recepty, skierownania.

--- a/src/main/resources/templates/fragments3.html
+++ b/src/main/resources/templates/fragments3.html
@@ -10,7 +10,7 @@
                 <a class="menuPD " href="/homepage">Aktualności</a>
                 <a class="menuPD" href="/patient/visit">Wizyty</a>
                 <a class="menuPD" href="/patient/doctor">Doktorzy</a>
-                <a class="menuPD" href="/patient">O mnie</a>
+                <a class="menuPD" href="/patient/about">O mnie</a>
             </section>
         </nav>
 
