--- a/src/main/resources/templates/visitPatient.html
+++ b/src/main/resources/templates/visitPatient.html
@@ -7,33 +7,57 @@
 <div id="container">
     <header th:insert="fragments3.html::header">Heder</header>
     <div id="content">
-        <div th:if="${visitWas}" class="contentform">
-            <h1>Informacje o mnie</h1>
-            <p th:text="${'Imie i nazwisko: ' + person.firstName + ' ' + person.lastName}">Jan Nowak</p>
-            <p th:text="${'Email: ' + person.email}">Email</p>
-            <p th:text="${'Nazwa urzytkownia: ' + person.userName}">Nazwa urzytkownika</p>
+        <div th:if="${notExist}" class="contentform">
+            <h1>ERROR</h1>
+            <p th:text="${notExist}">Błąd</p>
         </div>
-        <div class="contentform">
-            <h1>Moje wizyty</h1>
-            <div th:if="${visits}">
-                <table>
-                    <tr>
-                        <th>Data</th>
-                        <th>Opis</th>
-                        <th>Link</th>
-                    </tr>
-
-                    <tr th:each="visit : ${visits}">
-                        <td th:text="${'Data i gidzina: ' + visit.date + ' ' + visit.time}">12.12.2012 11:00</td>
-                        <td th:text="${visit.description}">Opis</td>
-                        <td><a th:href="@{/patient/visit/{id}(id=${visit.id})}">Przejdz...</a></td>
-                    </tr>
-
-                </table>
+        <div th:unless="${notExist}">
+            <div class="contentform">
+                <h1>Podstawowe informacje o Wizycie</h1>
+                <p th:text="${'Imie i nazwisko Doktora :' + doctor.getName() +' '+ doctor.getSurname()}">Jacek Klata</p>
+                <p th:text="${'Data spotkania: ' + visit.getDate() + ' ' + visit.getTime() }">Data</p>
+                <p th:text="${'Opis przesłany przez pacjenta: ' + visit.getDescription()}">Opis</p>
             </div>
-            <div th:unless="${visits}">
-                Brak wizyt!
+            <div th:if="note">
+                <div class="contentform">
+                    <h1>Notatka ze spotkania</h1>
+                    <p th:text="${'Tytuł notatki: ' + note.getTitle()}">Tytuł</p>
+                    <p th:text="${'Opis         : ' + note.getDescription()}">Opis</p>
+                </div>
+                <div th:if="referral" class="contentform">
+                    <h1>Skierownai na badania</h1>
+                    <table>
+                        <tr>
+                            <th>Tytuł</th>
+                            <th>Opis</th>
+                        </tr>
+                        <tr th:each="ref : ${referral}">
+                            <td th:text="${'Tytuł: ' + ref.title}">tytuł</td>
+                            <td th:text="${'Tytuł: ' + ref.description}">Opis</td>
+                        </tr>
+                    </table>
+                </div>
+                <div th:if="prescription" class="contentform">
+                    <h1>Recepta na leki</h1>
+                    <table>
+                        <tr>
+                            <th>Tytuł</th>
+                            <th>Opis</th>
+                        </tr>
+                        <tr th:each="pre : ${prescription}">
+                            <td th:text="${'Tytuł: ' + pre.name}">tytuł</td>
+                            <td th:text="${'Tytuł: ' + pre.description}">Opis</td>
+                        </tr>
+                    </table>
+                </div>
+                <div th:unless="prescription" class="contentform">
+                    <h1>Brak recept</h1>
+                </div>
             </div>
+            <div th:unless="note" class="contentform">
+                <h2>Ta wizyta jeszcze sienie odbyła</h2>
+            </div>
+
         </div>
         <div class="contentform">
             <a th:href="@{/logout}">Wyloguj się</a>
