--- a/src/main/resources/templates/visitPatient.html
+++ b/src/main/resources/templates/visitPatient.html
@@ -18,13 +18,13 @@
                 <p th:text="${'Data spotkania: ' + visit.getDate() + ' ' + visit.getTime() }">Data</p>
                 <p th:text="${'Opis przesłany przez pacjenta: ' + visit.getDescription()}">Opis</p>
             </div>
-            <div th:if="note">
+            <div th:if="${note}">
                 <div class="contentform">
                     <h1>Notatka ze spotkania</h1>
                     <p th:text="${'Tytuł notatki: ' + note.title}">Tytuł</p>
                     <p th:text="${'Opis         : ' + note.description}">Opis</p>
                 </div>
-                <div th:if="referral" class="contentform">
+                <div th:if="${referral}" class="contentform">
                     <h1>Skierownai na badania</h1>
                     <table>
                         <tr>
@@ -37,7 +37,7 @@
                         </tr>
                     </table>
                 </div>
-                <div th:if="prescription" class="contentform">
+                <div th:if="${prescription}" class="contentform">
                     <h1>Recepta na leki</h1>
                     <table>
                         <tr>
@@ -50,11 +50,11 @@
                         </tr>
                     </table>
                 </div>
-                <div th:unless="prescription" class="contentform">
+                <div th:unless="${prescription}" class="contentform">
                     <h1>Brak recept</h1>
                 </div>
             </div>
-            <div th:unless="note" class="contentform">
+            <div th:unless="${note}" class="contentform">
                 <h2>Ta wizyta jeszcze sienie odbyła</h2>
             </div>
 
