Implementacja przebiegu wizyty

--- a/src/main/resources/templates/fragments4.html
+++ b/src/main/resources/templates/fragments4.html
@@ -9,7 +9,7 @@
             <section id="navbar">
                 <a class="menuPD " href="/homepage">Aktualności</a>
                 <a class="menuPD" href="/doctor/visit">Wizyty</a>
-                <a class="menuPD" href="/doctor/doctor">Pacjenci</a>
+                <a class="menuPD" href="/doctor/patient">Pacjenci</a>
                 <a class="menuPD" href="/doctor">O mnie</a>
             </section>
         </nav>
