--- a/src/main/resources/templates/visitDoctor.html
+++ b/src/main/resources/templates/visitDoctor.html
@@ -26,7 +26,7 @@
                         <td th:text="${visit.description}">Opis</td>
                         <td th:if="${visit.isAccept()}">Zakceptowana</td>
                         <td th:unless="${visit.isAccept()}">Brak akceptacji</td>
-                        <td><a th:href="@{/doctor/visit/{id}(id=${visit.id})}">Przejdz...</a></td>
+                        <td><a th:href="@{/doctor/visit/{id}/info(id=${visit.id})}">Przejdz...</a></td>
                     </tr>
 
                 </table>
