--- a/src/main/resources/templates/fragments4.html
+++ b/src/main/resources/templates/fragments4.html
@@ -10,7 +10,7 @@
                 <a class="menuPD " href="/homepage">Aktualności</a>
                 <a class="menuPD" href="/doctor/visit">Wizyty</a>
                 <a class="menuPD" href="/doctor/patient">Pacjenci</a>
-                <a class="menuPD" href="/doctor">O mnie</a>
+                <a class="menuPD" href="/doctor/info">O mnie</a>
             </section>
         </nav>
 
